--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,8 +33,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.github.ar-android:AndroidSvgLoader:1.0.2'
+//    implementation 'com.squareup.picasso:picasso:2.71828'
+//    implementation 'com.github.ar-android:AndroidSvgLoader:1.0.2'
 
 
     testImplementation 'junit:junit:4.+'
